improved reset for conductivity tester and sugar dispenser
improved sugar pouring
improved user interaction for the sugar dispenser
5/9/11 Moved ConductivityTester and related strings and images from acid-base-solutions to piccolo-phet, see #2864
Fixed: Faucet shows fluid flow even when beaker is full
Reset the shaker location on reset
Made salt crystals square instead of round
Fixed: If you empty the solution, the bar charts go off-scale and stay that way when you add more water
Fixed: input faucet flows past the base of the beaker
Fixed water color for faucets
Added reset for water level, solute molarities, faucet flow levels and existence of crystals in the air
Moved the reset all button to the bottom right
Made it so the "remove solutes" button only appears if there are any solutes
Made water a lighter blue
Made the bar chart background the same color as the water
Made sugar and salt bars white in the concentration bar chart
Set the faucet flow back to zero when the user lets go, the user has to hold the slider to keep the faucet on
Moved salt bar to the left of sugar bar in concentration bar chart
Added water coming out of the faucets
# 0.00.03 (51620) May 6, 2011
Added a horizontal axis for the bar chart
Added a bar for sugar concentration
Fixed: when you remove the solution, the concentration changes
Fixed: the sim crashes when you empty out the entire solution
Added a button that removes solutes from the sim
# 0.00.02 (51613) May 6, 2011
Made background black and crystals white
made it so each grain of sugar and salt as 1E-6 moles (no randomness)
# 0.00.01 (51610) May 6, 2011
Added initial version of the bar chart
added concentration values to the model
Added sugar crystals
Added a beaker
added a shaker image
initialized application