@@ -1,26 +1,34 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.sugarandsaltsolutions.common.model;
 
+import java.awt.geom.Point2D;
+import java.awt.geom.Rectangle2D;
 import java.util.ArrayList;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
+import edu.colorado.phet.common.phetcommon.math.MathUtil;
 import edu.colorado.phet.common.phetcommon.model.clock.ClockAdapter;
 import edu.colorado.phet.common.phetcommon.model.clock.ClockEvent;
 import edu.colorado.phet.common.phetcommon.model.clock.ConstantDtClock;
 import edu.colorado.phet.common.phetcommon.model.event.Notifier;
 import edu.colorado.phet.common.phetcommon.model.property.ObservableProperty;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
+import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction0;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
+import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
+import edu.colorado.phet.common.piccolophet.nodes.conductivitytester.IConductivityTester.ConductivityTesterChangeListener;
 import edu.colorado.phet.sugarandsaltsolutions.common.view.SugarDispenser;
+import edu.umd.cs.piccolo.util.PDimension;
 
+import static edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform.createSinglePointScaleInvertedYMapping;
 import static edu.colorado.phet.sugarandsaltsolutions.common.model.DispenserType.SALT;
 import static edu.colorado.phet.sugarandsaltsolutions.common.model.DispenserType.SUGAR;
 
 /**
  * @author Sam Reid
  */
-public class SugarAndSaltSolutionModel {
+public abstract class SugarAndSaltSolutionModel {
     public final double width = 1.04;//visible width in meters
     public final double height = 0.7;//visible height in meters
 
@@ -76,7 +84,43 @@ public class SugarAndSaltSolutionModel {
                 updateModel( clockEvent.getSimulationTimeChange() );
             }
         } );
+
+        //Update the conductivity tester when the water level changes, since it might move up to touch a probe (or move out from underneath a submerged probe)
+        water.volume.addObserver( new SimpleObserver() {
+            public void update() {
+                updateConductivityTesterBrightness();
+            }
+        } );
+
+        //When the conductivity tester probe locations change, also update the conductivity tester brightness since they may come into contact (or leave contact) with the fluid
+        conductivityTester.addConductivityTesterChangeListener( new ConductivityTesterChangeListener() {
+            public void brightnessChanged() {
+            }
+
+            public void positiveProbeLocationChanged() {
+                updateConductivityTesterBrightness();
+            }
+
+            public void negativeProbeLocationChanged() {
+                updateConductivityTesterBrightness();
+            }
+        } );
     }
+
+    //Update the conductivity tester brightness when the probes come into contact with (or stop contacting) the fluid
+    protected void updateConductivityTesterBrightness() {
+
+        //Check for a collision with the probes
+        //Since ConductivityTesterNode doesn't support a ModelViewTransform, we treat its coordinates as view coordinates and back-convert them to model coordinates for hit test
+        Rectangle2D waterBounds = water.getShape().getBounds2D();
+        boolean bothProbesSubmerged = waterBounds.contains( getModelViewTransform().viewToModel( conductivityTester.getPositiveProbeLocationReference() ) ) &&
+                                      waterBounds.contains( getModelViewTransform().viewToModel( conductivityTester.getNegativeProbeLocationReference() ) );
+
+        //Set the brightness to be a linear function of the salt concentration (but keeping it bounded between 0 and 1 which are the limits of the conductivity tester brightness
+        conductivityTester.brightness.set( bothProbesSubmerged ? MathUtil.clamp( 0, getSaltConcentration() * 1E3, 1 ) : 0.0 );
+    }
+
+    public abstract double getSaltConcentration();
 
     //Adds the specified Sugar crystal to the model
     public void addSugar( final Sugar sugar ) {
@@ -194,5 +238,28 @@ public class SugarAndSaltSolutionModel {
     //Adds a listener that will be notified when the model is reset
     public void addResetListener( VoidFunction0 listener ) {
         resetListeners.add( listener );
+    }
+
+    //Gets the size of the stage to be used in the view
+    // Since ConductivityTesterNode doesn't use a ModelViewTransform, we have to model the transform here for hit testing the probes with the liquid
+    public PDimension getStageSize() {
+        //Width of the stage
+        final int stageWidth = 1008;//Actual size of the canvas coming up on windows from the IDE is java.awt.Dimension[width=1008,height=676]
+        final int stageHeight = (int) ( stageWidth / width * height );
+
+        //Set the stage size according to the model aspect ratio
+        final PDimension stageSize = new PDimension( stageWidth, stageHeight );
+        return stageSize;
+    }
+
+    //Gets the ModelViewTransform used to go between model coordinates (SI) and stage coordinates (roughly pixels)
+    //Since ConductivityTesterNode doesn't use a ModelViewTransform, we have to model the transform here for hit testing the probes with the liquid
+    public ModelViewTransform getModelViewTransform() {
+        //Create the transform from model (SI) to view (stage) coordinates
+        final double scale = getStageSize().width / width;
+        final ModelViewTransform transform = createSinglePointScaleInvertedYMapping( new Point2D.Double( 0, 0 ),
+                                                                                     new Point2D.Double( getStageSize().getWidth() * 0.43, getStageSize().getHeight() - 50 ),
+                                                                                     scale );
+        return transform;
     }
 }
